--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "exercises/learning-lm-rs"]
-	path = exercises/learning-lm-rs
-	url = https://github.com/wawahejun/learning-lm-rs
 [submodule "exercises/rustlings"]
 	path = exercises/rustlings
-	url = https://github.com/wawahejun/rustlings-completed-version
-[submodule "exercises/learning-cxx"]
-	path = exercises/learning-cxx
-	url = https://github.com/wawahejun/learning-cxx
+	url = https://github.com/yuxuan-z19/rustlings.git
